--- a/Fall_2024_MCON141_Class3_Homework_2.ipynb
+++ b/Fall_2024_MCON141_Class3_Homework_2.ipynb
@@ -65,11 +65,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "d9d440a9",
       "metadata": {
         "id": "d9d440a9",
-        "outputId": "d0f27227-aee1-4e15-dfc1-9a3c315c9b8a",
+        "outputId": "3ed90ec2-f40a-4948-9ab6-63cab0e3ddab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -79,9 +79,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what is the order total?65\n",
-            "are you a member (y/n)?n\n",
-            "free shipping\n"
+            "what is the order total?35\n",
+            "are you a member (y/n)?y\n",
+            "no free shipping\n"
           ]
         }
       ],
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "61ea08e9",
       "metadata": {
         "id": "61ea08e9",
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "ea753771",
       "metadata": {
         "id": "ea753771",
@@ -244,8 +244,7 @@
         "elif hour >=7 and hour <=8 or hour >=21 and hour <=22:\n",
         "  print(\"open to members\")\n",
         "else:\n",
-        "  print(\"closed\")\n",
-        ""
+        "  print(\"closed\")\n"
       ]
     },
     {
@@ -275,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "5986f534",
       "metadata": {
         "id": "5986f534",
@@ -337,25 +336,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "ccbba117",
       "metadata": {
-        "id": "ccbba117"
+        "id": "ccbba117",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eeca9e7f-8933-4daa-d96a-4e16ca6c59cf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what day is it?sun\n",
+            "what time is it?9\n",
+            "is it a holiday (y/n)?n\n",
+            "parking allowed\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# YOUR CODE HERE\n",
         "# 1) Validate day/hour/holiday\n",
         "# 2) Decide and print the exact message\n",
-        "\n",
-        "question=\"what day is it? (\"mon\",\"tues\",\"wed\",\"thurs\",\"fri\",\"sat\",\"sun\")\"\n",
-        "day=input(question)\n",
-        "question_2=\"what hour is it? (0-23)\"\n",
-        "hour=int(input(question_2))\n",
-        "question_3=\"is it a holiday? (\"y\",\"n\")\"\n",
-        "holiday=input(question)\n",
-        "\n",
+        "question = \"what day is it?\"\n",
+        "day = input(question)\n",
+        "question_2 = \"what time is it?\"\n",
+        "hour = int(input(question_2))\n",
+        "question_3 = \"is it a holiday (y/n)?\"\n",
+        "holiday = input(question_3)\n",
+        "if day == \"mon\" or day == \"tue\" or day == \"wed\" or day == \"thu\" or day == \"fri\":\n",
+        "  if hour >=7 and hour <=10 or hour >=16 and hour <=19 and holiday == \"n\":\n",
+        "    print(\"no parking\")\n",
+        "  elif holiday == \"y\":\n",
+        "    print(\"parking allowed\")\n",
+        "  else:\n",
+        "    print(\"parking allowed\")\n",
+        "else:\n",
+        "  print(\"parking allowed\")\n",
         "\n"
       ]
     },
@@ -388,18 +409,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "0598e54f",
       "metadata": {
-        "id": "0598e54f"
+        "id": "0598e54f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a5c67122-16de-496f-9cf6-d7fe9e4234cd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what is the raw grade?78\n",
+            "what is the curve?12\n",
+            "A\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# YOUR CODE HERE\n",
         "# 1) Validate raw/curve\n",
         "# 2) Clamp 0..100\n",
         "# 3) Print one letter\n",
+        "question=\"what is the raw grade?\"\n",
+        "raw = float(input(question))\n",
+        "question_2 = \"what is the curve?\"\n",
+        "curve = int(input(question_2))\n",
+        "final = raw + curve\n",
+        "if final < 0:\n",
+        "  final = 0\n",
+        "elif final > 100:\n",
+        "  final = 100\n",
+        "elif final >= 90:\n",
+        "  print(\"A\")\n",
+        "elif final >= 80:\n",
+        "  print(\"B\")\n",
+        "elif final >= 70:\n",
+        "  print(\"C\")\n",
+        "elif final >= 60:\n",
+        "  print(\"D\")\n",
+        "else:\n",
+        "  print(\"F\")\n",
+        "\n",
         "\n",
         "\n"
       ]
@@ -438,17 +493,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "f3a3d82a",
       "metadata": {
-        "id": "f3a3d82a"
+        "id": "f3a3d82a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc1e1435-7d91-4897-dae3-b6c10edc88a2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter textracecar\n",
+            "palindrome\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# YOUR CODE HERE\n",
         "# 1) Read and normalize text\n",
-        "# 2) Compare to reversed and print the message\n"
+        "# 2) Compare to reversed and print the message\n",
+        "question=\"enter text\"\n",
+        "text = input(question).strip().lower()\n",
+        "text_reversed = text[::-1]\n",
+        "if text == text_reversed:\n",
+        "  print(\"palindrome\")\n",
+        "else:\n",
+        "  print(\"not palindrome\")"
       ]
     },
     {
@@ -473,24 +548,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "b9986d4a",
       "metadata": {
-        "id": "b9986d4a"
+        "id": "b9986d4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "13b4f466-49b7-4c40-e7c1-5af90319f2f3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a textracecar\n",
+            "palindrome\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
         "def is_palindrome(text):\n",
         "    \"\"\"Return True if text is a palindrome after strip+lower, else False.\"\"\"\n",
-        "    # TODO: normalize text (strip + lower)\n",
-        "    # TODO: compare with reversed (slicing is ok)\n",
-        "    # TODO: return True/False\n",
-        "    pass\n",
+        "    normalized_text = text.strip().lower()\n",
+        "    return normalized_text == normalized_text[::-1]\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "# 1) Prompt for input\n",
-        "# 2) Call is_palindrome and print the correct message\n"
+        "# 1) Prompt for input (single attempt due to no-loop constraint)\n",
+        "# 2) Call is_palindrome and print the correct message\n",
+        "text = input(\"enter a text\")\n",
+        "palindrome=is_palindrome(text)\n",
+        "if (palindrome):\n",
+        "  print(\"palindrome\")\n",
+        "else:\n",
+        "  print(\"not palindrome\")"
       ]
     },
     {
@@ -518,24 +609,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "11240051",
       "metadata": {
-        "id": "11240051"
+        "id": "11240051",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb49c15b-2e16-40f1-f2ad-36add7af073a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what day is it?mon\n",
+            "what time is it?11\n",
+            "is it a holiday?n\n",
+            "parking allowed\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "def parking_allowed(day, hour, holiday):\n",
         "    \"\"\"Return True if parking is allowed under the policy; else False.\n",
         "    day: 'mon'..'sun', hour: 0..23, holiday: 'y' or 'n'\n",
         "    \"\"\"\n",
+        "    if day == \"mon\" or day == \"tue\" or day == \"wed\" or day == \"thu\" or day == \"fri\":\n",
+        "      if hour >=7 and hour <=10 or hour >=16 and hour <=19 and holiday == \"n\":\n",
+        "        return False\n",
+        "      elif holiday == \"y\":\n",
+        "        return True\n",
+        "      else:\n",
+        "        return True\n",
+        "    else:\n",
+        "      return True\n",
         "    # TODO: implement using and/or/not\n",
         "    pass\n",
         "\n",
         "# YOUR CODE HERE\n",
         "# 1) Prompt and validate inputs\n",
-        "# 2) Call parking_allowed and print the exact message\n"
+        "day=input(\"what day is it?\")\n",
+        "hour=int(input(\"what time is it?\"))\n",
+        "holiday=input(\"is it a holiday?\")\n",
+        "# 2) Call parking_allowed and print the exact message\n",
+        "parking=parking_allowed(day,hour,holiday)\n",
+        "if (parking):\n",
+        "  print(\"parking allowed\")\n",
+        "else:\n",
+        "  print(\"no parking\")"
       ]
     },
     {
@@ -588,19 +711,134 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "b51d7e1b",
       "metadata": {
-        "id": "b51d7e1b"
+        "id": "b51d7e1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38f547fd-7320-47c4-8f30-838a4683ffb6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what is your age? (0-120)19\n",
+            "what day is it? (mon..sun)mon\n",
+            "what time is it? (0-23)11\n",
+            "is it a holiday? (y/n)n\n",
+            "are you a member? (y/n)n\n",
+            "are you a student? (y/n)y\n",
+            "what is the base price?30\n",
+            "do you have a 10% coupon? (y/n)n\n",
+            "do you have a 15% coupon? (y/n)n\n",
+            "entry allowed\n",
+            "discount applied: 10%\n",
+            "base price: $30.00\n",
+            "discount applied: $3.00\n",
+            "final price: $27.00\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
         "# YOUR CODE HERE\n",
         "# 1) Gather and validate inputs (try/except + raise ValueError for issues)\n",
+        "age=int(input(\"what is your age? (0-120)\"))\n",
+        "try:\n",
+        "  if age < 0 or age > 120:\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid age\")\n",
+        "day=input(\"what day is it? (mon..sun)\")\n",
+        "try:\n",
+        "  if day != \"mon\" and day != \"tue\" and day != \"wed\" and day != \"thu\" and day != \"fri\" and day != \"sat\" and day != \"sun\":\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid day\")\n",
+        "hour=int(input(\"what time is it? (0-23)\"))\n",
+        "try:\n",
+        "  if hour < 0 or hour > 23:\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid hour\")\n",
+        "holiday=input(\"is it a holiday? (y/n)\")\n",
+        "try:\n",
+        "  if holiday != \"y\" and holiday != \"n\":\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid holiday\")\n",
+        "member=input(\"are you a member? (y/n)\")\n",
+        "try:\n",
+        "  if member != \"y\" and member != \"n\":\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid member\")\n",
+        "student=input(\"are you a student? (y/n)\")\n",
+        "try:\n",
+        "  if student != \"y\" and student != \"n\":\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid student\")\n",
+        "base_price=float(input(\"what is the base price?\"))\n",
+        "try:\n",
+        "  if base_price < 0:\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid base price\")\n",
+        "coupon10=input(\"do you have a 10% coupon? (y/n)\")\n",
+        "try:\n",
+        "  if coupon10 != \"y\" and coupon10 != \"n\":\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid coupon10\")\n",
+        "coupon15=input(\"do you have a 15% coupon? (y/n)\")\n",
+        "try:\n",
+        "  if coupon15 != \"y\" and coupon15 != \"n\":\n",
+        "    raise ValueError\n",
+        "except ValueError:\n",
+        "  print(\"invalid coupon15\")\n",
+        "discount = 0\n",
         "# 2) Decide entry\n",
+        "if holiday == \"y\":\n",
+        "  print(\"entry allowed\")\n",
+        "elif hour >= 10 and hour <= 22:\n",
+        "  print(\"entry allowed\")\n",
+        "elif hour == 9 or hour == 23:\n",
+        "  if member == \"y\":\n",
+        "    print(\"entry allowed\")\n",
+        "  else:\n",
+        "    print(\"closed\")\n",
+        "else:\n",
+        "  print(\"closed\")\n",
+        "\n",
         "# 3) If allowed, apply the discount rules in the given order (at most one discount category)\n",
-        "# 4) Print a clear summary with two-decimal formatting\n"
+        "if coupon10 == \"y\" and coupon15 == \"y\":\n",
+        "  print(\"invalid: cannot stack\")\n",
+        "elif coupon15 == \"y\" and base_price >= 80:\n",
+        "  discount=.15\n",
+        "  print(\"discount applied: 15%\")\n",
+        "elif coupon10 == \"y\" and base_price >= 50:\n",
+        "  discount=.10\n",
+        "  print(\"discount applied: 10%\")\n",
+        "elif age < 12 or age >= 65:\n",
+        "  discount=.20\n",
+        "  print(\"discount applied: 20%\")\n",
+        "elif student == \"y\" or member == \"y\":\n",
+        "  discount=.10\n",
+        "  print(\"discount applied: 10%\")\n",
+        "else:\n",
+        "  print(\"no discount\")\n",
+        "# 4) Print a clear summary with two-decimal formatting\n",
+        "discount_amount=base_price*discount\n",
+        "final_price=base_price-discount_amount\n",
+        "print(f\"base price: ${base_price:.2f}\")\n",
+        "print(f\"discount applied: ${discount_amount:.2f}\")\n",
+        "print(f\"final price: ${final_price:.2f}\")\n",
+        "\n",
+        "# 1) Gather and validate inputs (single attempt due to no-loop constraint for validation)\n",
+        "\n"
       ]
     },
     {
